# sfml-game-engine

./: Makefile  README.md  demo.cpp  demo.hpp  hagrid.cpp  hagrid.hpp  main.cpp  meson.build
.cache/clangd/index/: balloon.cpp.A798F54629B4AE33.idx  balloon.hpp.6E70950844A735F0.idx  button.cpp.DFC67FF8918D4698.idx  button.hpp.C0C684786A3A1ECB.idx  element.cpp.7D976D838601C687.idx  element.hpp.B779220A7C139B1F.idx  engine.cpp.CDC078B365C2D01F.idx  engine.hpp.27461CF514AA891E.idx  enum-resources.hpp.AD6423445DF0364C.idx  event-manager.hpp.C225F1864F224DA9.idx  hagrid.hpp.81F142C56E1DC00C.idx  main.cpp.B4EBDA5DECBAD52F.idx  resource-manager.cpp.F37FC017FD39FFD0.idx  resource-manager.hpp.C23295BC5A869735.idx  scene.cpp.FEECEF5012E61B99.idx  scene.hpp.B3845E245258C583.idx  sound-manager.cpp.EB44BFE16C5A979B.idx  sound-manager.hpp.2046F71954599582.idx
include/: button.cpp  button.hpp  element.cpp  element.hpp  engine.cpp  engine.hpp  enum-resources.hpp  event-manager.hpp  resource-manager.cpp  resource-manager.hpp  scene.cpp  scene.hpp  sound-manager.cpp  sound-manager.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
src/: balloon.cpp  balloon.hpp  button.cpp  button.hpp  element.cpp  element.hpp  engine.cpp  engine.hpp  enum-resources.hpp  event-manager.hpp  resource-manager.cpp  scene.cpp  scene.hpp  sound-manager.cpp  sound-manager.hpp
